--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>Otto</td>
-            <td>Otto</td>
-            <td>Otto</td>
+            <th scope="row"><p id="booteddate"></p></th>
+            <td> <p id="bootedtime"></p></td>
+            <td><p id="currentDate"></p></td>
+            <td><p id="currentTimeon"></p></td>
+            <td><p id="durationString"></p></td>
+            <td><p id="user_pc"></p></td>
           </tr>
-          <tr>
+          <!-- <tr>
             <th scope="row">2</th>
             <td>Mark</td>
             <td>Otto</td>
@@ -108,18 +108,14 @@
             <td>Otto</td>
             <td>Otto</td>
             <td>Otto</td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </section>
 
-   <section>
-    <p id="currentTime"></p>
-    <p id="formattedBootTime"></p>
-
-   </section>
-
-    
+    <section>
+      <!-- <p id="formattedBootTime"></p> -->
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
